processed/jira/txt/LU/LU-13236.txt
Key:        LU-13236
Summary:    Failed to build net_fault.c on ubuntu 5.3 kernel
Link:       https://jira.whamcloud.com/browse/LU-13236
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Duplicate
Assignee:   Wang Shilong
Reporter:   Wang Shilong
Created:    Tue, 11 Feb 2020 11:03:41 +0000
Updated:    Wed, 12 Feb 2020 09:06:50 +0000
Resolved:   Wed, 12 Feb 2020 08:12:06 +0000
Links:      Related: is related to  LU-13210

--- Description ---
Hit following build failure on b2_12,  we've applied LU-12635 patches, but this looks like a leftover from that ticket.

/lnet/lnet/net_fault.c:689:5: error: this statement may fall through [-Werror=implicit-fallthrough=]

     lnet_ni_recv(ni, msg->msg_private, msg, 0,

     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

           0, msg->msg_len, msg->msg_len);

           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

/lnet/lnet/net_fault.c:691:4: note: here

    case LNET_CREDIT_WAIT:

    ^~~~

--- Comment (wshilong, Wed, 12 Feb 2020 09:06:50 +0000) ---
Thanks, i was not aware of that.

--- Comment (adilger, Wed, 12 Feb 2020 08:12:56 +0000) ---
Use "Resolve" instead of "Close" to close issues.

--- Comment (wshilong, Wed, 12 Feb 2020 01:25:36 +0000) ---
Duplicated with existed patch: https://review.whamcloud.com/#/c/37466

Since that patch has been ready to land, let's use that one instead.

--- Comment (gerrit, Tue, 11 Feb 2020 11:05:37 +0000) ---
Wang Shilong (wshilong@ddn.com) uploaded a new patch: https://review.whamcloud.com/37536

Subject: LU-13236 lnet: fix build faiure in net_fault.c

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 157c8968dcf30aa7eb58045628a69c8e2dac1024
